# dioxus-ntf-poc

./: .prettierignore  Cargo.toml  bacon.toml  flake.nix  git-z.toml  taplo.toml
ntf-api/src/: lib.rs
ntf-app/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json  tailwind.css
ntf-app/src/: main.rs
ntf-srv/: Cargo.toml
ntf-srv/src/: main.rs
xtask/src/: main.rs
